--- a/src/templates/reset-password-email.html
+++ b/src/templates/reset-password-email.html
@@ -6,7 +6,9 @@
     <title>Reset password email</title>
   </head>
   <body>
-    <h1style="color:blue">Hello, {{name}}!</h1style=>
-    <p>Click <a href="{{link}}">here</a> to reset your password!</p>
+    <h1 style="color:blue">Hello, {{name}}!</h1>
+    <p>To reset your password, click the button below:</p>
+    <a href="{{link}}" style="display:inline-block;padding:10px 20px;background:#007bff;color:#fff;text-decoration:none;border-radius:5px;">Reset Password</a>
+    <p>If you did not request a password reset, please ignore this email.</p>
   </body>
 </html>
